# program-cicoph-1

./: PROJECT_DESCRIPTION.md  README.md
anchor_project/raffle/: .gitignore  Anchor.toml  package-lock.json
anchor_project/raffle/keypairs/: update_authority.json
anchor_project/raffle/programs/raffle/: Cargo.toml
anchor_project/raffle/programs/raffle/src/: constants.rs  error.rs  lib.rs  state.rs  utils.rs
anchor_project/raffle/programs/raffle/src/instructions/: buy_raffle_tickets.rs  claim_raffle_prize.rs  close_entrants.rs  create_raffle.rs  mod.rs  reveal_raffle_winner.rs
anchor_project/raffle/tests/: raffle.ts
